add project setup

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     
     <!-- ===========================CSS================================== -->
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="css/styles.css">
     <title>Headphone Website Design</title>
 </head>
 <body>
