--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 
                     <a href="#" class="button button--flex">
                         <span class="button--flex">
-                            <i class="ri-shopping-bag-line button__icon"></i>
+                            <i class="ri-shopping-bag-line button__icon"></i></i> Add to Bag
                         </span>
 
                         <span class="home__price">$299</span>
