--- a/index.html
+++ b/index.html
@@ -155,6 +155,18 @@
             </div>
     </section>
 
+    <!--=============== DISCOUNT ===============-->
+    <section class="discount section">
+        <div class="discount__container container grid">
+            <h2 class="discount__title">Immerse yourself in <br> your music</h2>
+            <p class="discount__description">Get it now, up to 50% off.</p>
+            <a href="" class="button button--flex">
+                <i class="ri-shopping-bag-line button__icon"></i> Shop Now
+            </a>
+            <img src="assets/img/discount.png" alt="" class="discount__img">
+        </div>
+    </section>
+
 </main>
 <!-- =====================FOOTER================================== -->
 <footer class="footer section">
