--- a/index.html
+++ b/index.html
@@ -245,6 +245,7 @@
         <a href="#" class="footer__logo">
             <img src="assets/img/logo.png" alt="">
         </a>
+
         <div class="footer__content">
             <h3 class="footer__title">Products</h3>
 
@@ -285,27 +286,28 @@
 
         <div class="footer__content">
             <form action="" class="footer__form">
-                <input type="text" placeholder="Email" class="footer__input">
+                <input type="email" placeholder="Email" class="footer__input">
                 <button class="button button--flex">
                     <i class="ri-send-plane-line button__icon"></i> Subscribe
                 </button>
-            </form>
-        </div>
+            </form><br>
 
-        <div class="footer__social">
-            <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
-                <i class="ri-facebook-fill"></i>
-            </a>
-            <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
-                <i class="ri-instagram-line"></i>
-            </a>
-            <a href="https://twitter.com/" target="_blank" class="footer__social-link">
-                <i class="ri-twitter-line"></i>
-            </a>
+            <div class="footer__social">
+                <a href="https://www.facebook.com/" target="_blank" class="footer__social-link">
+                    <i class="ri-facebook-fill"></i>
+                </a>
+                <a href="https://www.instagram.com/" target="_blank" class="footer__social-link">
+                    <i class="ri-instagram-line"></i>
+                </a>
+                <a href="https://twitter.com/" target="_blank" class="footer__social-link">
+                    <i class="ri-twitter-line"></i>
+                </a>
+            </div>
         </div>
     </div>
+
     <p class="footer__copy">
-        <a href="#" target="_blank" class="footer__copy-link">& All right reserved</a>
+        <a href="#"  class="footer__copy-link"> All right reserved</a>
     </p>
 </footer>
 
