add ScrollReveal Animation

--- a/index.html
+++ b/index.html
@@ -37,6 +37,10 @@
                 <li class="nav__item">
                     <a href="#case" class="nav__link">Case</a>
                 </li>
+
+                <li class="nav__item">
+                    <a href="#discount" class="nav__link">Discount</a>
+                </li>
                 <li class="nav__item">
                     <a href="#products" class="nav__link">Products</a>
                 </li>
@@ -156,13 +160,15 @@
     </section>
 
     <!--=============== DISCOUNT ===============-->
-    <section class="discount section">
+    <section class="discount section" id="discount">
         <div class="discount__container container grid">
-            <h2 class="discount__title">Immerse yourself in <br> your music</h2>
-            <p class="discount__description">Get it now, up to 50% off.</p>
-            <a href="" class="button button--flex">
-                <i class="ri-shopping-bag-line button__icon"></i> Shop Now
-            </a>
+            <div class="discount__animate">
+                <h2 class="discount__title">Immerse yourself in <br> your music</h2>
+                <p class="discount__description">Get it now, up to 50% off.</p>
+                <a href="" class="button button--flex">
+                    <i class="ri-shopping-bag-line button__icon"></i> Shop Now
+                </a>
+            </div>
             <img src="assets/img/discount.png" alt="" class="discount__img">
         </div>
     </section>
@@ -318,7 +324,7 @@
 
 
 <!-- =====================SCROLL REVEAL================================== -->
-
+ <script src="https://unpkg.com/scrollreveal"></script>
 
 
 
